--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -2,7 +2,7 @@
 import SinglePageLayout from "../layouts/SinglePageLayout.astro";
 ---
 
-<SinglePageLayout title="Professional Work" footer={false}>
+<SinglePageLayout title="Professional Work">
   <nav>
     <ul>
       <li>
@@ -150,7 +150,7 @@ import SinglePageLayout from "../layouts/SinglePageLayout.astro";
   is:inline
   src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
 <script>
-  gsap.from("mark", {
+  gsap.from("nav > ul > li > a > mark", {
     opacity: 0,
     duration: 5,
     ease: "ease-in",
