--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -2,7 +2,7 @@
 import SinglePageLayout from "../layouts/SinglePageLayout.astro";
 ---
 
-<SinglePageLayout title="Professional Work">
+<SinglePageLayout title="Professional Work" footer={false}>
   <nav>
     <ul>
       <li>
