--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -31,7 +31,7 @@ import Footer from "../components/Footer.astro";
     <title>{title}</title>
   </head>
   <body>
-    {navCheck ? marquee ? <Nav marquee={true} /> : <Nav /> : <div />}
+    {navCheck ? <Nav marquee={marquee} /> : <div />}
     <slot />
     {footer ? <Footer /> : <div />}
     <script
