--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -4,8 +4,11 @@
       &#x1F440;</span
     >
   </div>
-  <!-- <div class="message">Second Message</div> -->
-  <!-- <div class="message">Third Message</div> -->
+  <div class="message">
+    Currently working on various forms of animation (Blender, GSAP, etc)
+  </div>
+  <div class="message">Get 20% OFF your TIME, reading this banner!</div>
+  <div class="message">A FOURTH BANNER? WOAH!</div>
 </div>
 
 <style>
@@ -14,6 +17,7 @@
   }
   #marquee {
     display: flex;
+    align-items: center;
     overflow-x: scroll;
     overflow-y: hidden;
     scroll-snap-type: x mandatory;
