Update ContactForm and add new layouts

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -37,10 +37,6 @@
 Could we set up a time to chat / discuss this further?"
       ></textarea>
     </label>
-    <label>
-      Relevant Files <em>(optional)</em>:
-      <input type="file" name="upload" />
-    </label>
     <button type="submit">Send</button>
   </form>
 </div>
@@ -101,9 +97,25 @@ Could we set up a time to chat / discuss this further?"
     box-shadow:
       3px 3px 0.6rem #ec5353,
       -1em 0 0.4em #919118;
-    border-image: linear-gradient(to bottom, #4277db 90%, #f6b73c00) 30;
+    border-image: linear-gradient(
+        to bottom,
+        #ffffff17,
+        #4277db 10%,
+        #4277db 90%,
+        #f6b73c00
+      )
+      30;
     border-width: 4px;
     border-style: solid;
+    background: linear-gradient(
+        217deg,
+        rgba(113, 106, 106, 0.8),
+        rgba(255, 0, 0, 0) 70.71%
+      ),
+      linear-gradient(127deg, rgba(38, 36, 36, 0.8), rgba(0, 255, 0, 0) 70.71%),
+      linear-gradient(336deg, rgba(58, 58, 58, 0.8), rgba(0, 0, 255, 0) 70.71%);
+
+    overflow-x: hidden;
   }
 
   form {
@@ -175,3 +187,24 @@ Could we set up a time to chat / discuss this further?"
     }
   }
 </style>
+<!-- lenis, gsap, and gsap scroll trigger -->
+<script
+  is:inline
+  src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.0/bundled/lenis.js"
+></script>
+<script
+  is:inline
+  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+<script
+  is:inline
+  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"
+></script>
+<script>
+  // gsap in from right and fade in
+  gsap.from(".container", {
+    x: 100,
+    opacity: 0,
+    duration: 1,
+    ease: "power2",
+  });
+</script>
