--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,13 +1,13 @@
 ---
-import MainLayout from "../layouts/MainLayout.astro";
+import OverflowXLayout from "../layouts/OverflowXLayout.astro";
 import ContactForm from "../components/ContactForm.astro";
 ---
 
-<MainLayout title="Contact">
+<OverflowXLayout title="Contact">
   <div id="contact-form">
     <ContactForm />
   </div>
-</MainLayout>
+</OverflowXLayout>
 
 <style>
   #contact-form {
