--- a/src/layouts/OverflowXLayout.astro
+++ b/src/layouts/OverflowXLayout.astro
@@ -41,8 +41,11 @@ import Nav from "../components/Nav.astro";
 
   body {
     color: white;
-  }
-  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 98dvh;
+    gap: 1rem;
     overflow-x: hidden;
   }
 </style>
