need to fix auto added emojis

--- a/src/components/FooterComments.astro
+++ b/src/components/FooterComments.astro
@@ -291,7 +291,7 @@
   .emoji {
     /* font-size: 1.5rem; */
     font-style: normal;
-    /* display: none; */
+    display: none;
   }
 
   .flip {
