--- a/src/components/FooterSocials.astro
+++ b/src/components/FooterSocials.astro
@@ -157,8 +157,15 @@
   .socials::-webkit-scrollbar {
     display: none;
   }
+  .socials > a:visited {
+    color: unset;
+  }
+  .socials > a:focus-visible {
+    outline: none;
+  }
   .socials > a:focus {
     outline: 3px solid rgb(222, 184, 135);
+    outline-offset: 5px;
   }
 
   .socials {
@@ -182,15 +189,19 @@
     }
   } */
   .socials a {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0.5rem 1rem;
+    /* outline-offset: 5px; */
+    transition: all 0.3s ease-in-out;
+    border-radius: 3px;
   }
   .socials svg {
     height: 28px;
     /* margin: 1rem; */
     color: white; /* the font-awesome icons will inherit this color (astro)*/
     opacity: 0.7;
-    padding: 0.2rem;
   }
   .socials path {
     fill: white;
