--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -165,6 +165,14 @@ let navPadding = marquee ? "0 0 1.2rem 0;" : "1.2rem 0;";
     animation: draw-on-hover 10s cubic-bezier(0.22, 0.61, 0.36, 1) forwards
       infinite;
   }
+  .nav-logo:focus > svg {
+    filter: drop-shadow(3px 5px 2px rgba(222, 184, 135, 0.692));
+  }
+  .nav-logo:focus {
+    outline: none;
+    border-radius: 5px;
+    /* box-shadow: 0 -10px 5px -5px burlywood inset; */
+  }
 
   .nav-link-container {
     display: flex;
