Update styles for navigation and portfolio components

--- a/src/components/FooterBuildLinks.astro
+++ b/src/components/FooterBuildLinks.astro
@@ -1,41 +1,42 @@
 <div id="build-links-container">
   <div>
-    100% <a href="#" class="build-link">indie built</a>, for better or worse!<span
-      class="emoji">&nbsp;&#x1F60B;</span
-    >
+    100% <a target="_blank" href="#" class="build-link">indie built</a>, for
+    better or worse!<span class="emoji">&nbsp;&#x1F60B;</span>
   </div>
   <div>
     Made&nbsp;<span class="strike">by</span>&nbsp;<span class="strike wavy"
       >with AI</span
-    >&nbsp;<a href="#" class="build-link">ME</a><span class="emoji"
-      >&nbsp;&#x1F913;</span
+    >&nbsp;<a target="_blank" href="#" class="build-link">ME</a><span
+      class="emoji">&nbsp;&#x1F913;</span
     >
   </div>
   <div>
-    <a href="#" class="build-link">Homegrown</a> website - don't mind the
+    <a target="_blank" href="#" class="build-link">Homegrown</a> website - don't
+    mind the
     <a
+      target="_blank"
       href="https://github.com/danielSegarra36/danielSegarra36.github.io/issues"
       class="build-link">bugs</a
     >!<span class="emoji">&nbsp;&#x1F41B;&nbsp;&#x1F41B;&nbsp;&#x1F41B;</span>
   </div>
   <div>
     issa
-    <a href="#" class="build-link"> website</a><span class="emoji"
-      >&nbsp;&#x1F30E;</span
+    <a target="_blank" href="#" class="build-link"> website</a><span
+      class="emoji">&nbsp;&#x1F30E;</span
     >
   </div>
   <div>
-    made with <a href="#" class="build-link">my busted a** hands</a><span
-      class="emoji">&nbsp;&#x1F972;</span
-    >
+    made with <a target="_blank" href="#" class="build-link"
+      >my busted a** hands</a
+    ><span class="emoji">&nbsp;&#x1F972;</span>
   </div>
   <div>
-    hecho con <a href="#" class="build-link"> orgullo</a>
+    hecho con <a target="_blank" href="#" class="build-link"> orgullo</a>
     <span class="emoji">&nbsp;&#127752;</span>
   </div>
   <div>
-    made in <a href="#" class="build-link">cyberspace</a><span class="emoji"
-      >&nbsp;&#x1F60B;</span
+    made in <a target="_blank" href="#" class="build-link">cyberspace</a><span
+      class="emoji">&nbsp;&#x1F60B;</span
     >
   </div>
 </div>
