--- a/src/components/ScrollItem.astro
+++ b/src/components/ScrollItem.astro
@@ -27,7 +27,7 @@ let pd = "50px";
     <span class="stroke">{title_line_2}</span>
   </h2>
   <div class="item_desc">{description}</div>
-  <a class="item_link" href={link}>{button_text}</a>
+  <a target="_blank" class="item_link" href={link}>{button_text}</a>
 </div>
 
 <style
