--- a/src/components/FooterSocials.astro
+++ b/src/components/FooterSocials.astro
@@ -1,5 +1,5 @@
 <div class="socials">
-  <a href="https://www.linkedin.com/in/danielsegarra36/">
+  <a target="_blank" href="https://www.linkedin.com/in/danielsegarra36/">
     <svg
       class="svg-inline--fa fa-linkedin-in"
       aria-hidden="true"
@@ -17,7 +17,7 @@
       ></path>
     </svg>
   </a>
-  <a href="https://www.github.com/danielsegarra36/">
+  <a target="_blank" href="https://www.github.com/danielsegarra36/">
     <svg
       class="svg-inline--fa fa-github"
       aria-hidden="true"
@@ -35,7 +35,7 @@
       ></path>
     </svg><!-- <i class="fa-brands fa-github" data-astro-cid-sz7xmlte=""></i> Font Awesome fontawesome.com -->
   </a>
-  <a href="https://www.dribbble.com/DanielSegarra36"
+  <a target="_blank" href="https://www.dribbble.com/DanielSegarra36"
     ><svg
       class="svg-inline--fa fa-dribbble"
       aria-hidden="true"
@@ -52,7 +52,7 @@
       ></path></svg
     ><!-- <i class="fa-brands fa-dribbble" data-astro-cid-sz7xmlte=""></i> Font Awesome fontawesome.com --></a
   >
-  <a href="https://www.behance.net/danielsegarra36"
+  <a target="_blank" href="https://www.behance.net/danielsegarra36"
     ><svg
       class="svg-inline--fa fa-behance"
       aria-hidden="true"
@@ -69,7 +69,7 @@
       ></path></svg
     ><!-- <i class="fa-brands fa-behance" data-astro-cid-sz7xmlte=""></i> Font Awesome fontawesome.com --></a
   >
-  <a href="https://www.figma.com/@danielsegarra36"
+  <a target="_blank" href="https://www.figma.com/@danielsegarra36"
     ><svg
       class="svg-inline--fa fa-figma"
       aria-hidden="true"
@@ -86,7 +86,7 @@
       ></path></svg
     ><!-- <i class="fa-brands fa-figma" data-astro-cid-sz7xmlte=""></i> Font Awesome fontawesome.com --></a
   >
-  <a href="https://www.codepen.io/daniesegarra36/"
+  <a target="_blank" href="https://www.codepen.io/daniesegarra36/"
     ><svg
       class="svg-inline--fa fa-codepen"
       aria-hidden="true"
@@ -103,7 +103,7 @@
       ></path></svg
     ><!-- <i class="fa-brands fa-codepen" data-astro-cid-sz7xmlte=""></i> Font Awesome fontawesome.com --></a
   >
-  <a href="https://www.medium.com/@danielsegarra36"
+  <a target="_blank" href="https://www.medium.com/@danielsegarra36"
     ><svg
       class="svg-inline--fa fa-medium"
       aria-hidden="true"
@@ -120,7 +120,7 @@
       ></path></svg
     ><!-- <i class="fa-brands fa-medium" data-astro-cid-sz7xmlte=""></i> Font Awesome fontawesome.com --></a
   >
-  <a href="https://replit.com/@DanielSegarra36"
+  <a target="_blank" href="https://replit.com/@DanielSegarra36"
     ><svg viewBox="3 3 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
       <defs></defs>
       <path
@@ -134,7 +134,7 @@
         fill="#F26207"></path>
     </svg></a
   >
-  <a href="https://ko-fi.com/danielsegarra36"
+  <a target="_blank" href="https://ko-fi.com/danielsegarra36"
     ><svg
       class="svg-inline--fa fa-cat"
       aria-hidden="true"
@@ -161,9 +161,6 @@
     color: unset;
   }
   .socials > a:focus-visible {
-    outline: none;
-  }
-  .socials > a:focus {
     outline: 3px solid rgb(222, 184, 135);
     outline-offset: 5px;
   }
@@ -207,7 +204,7 @@
     fill: white;
   }
   .socials a:hover svg {
-    opacity: 1;
+    opacity: 1 !important;
   }
 
   @media screen and (max-width: 356px) {
