--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,13 +1,13 @@
 ---
-import OverflowXLayout from "../layouts/OverflowXLayout.astro";
+import MainLayout from "../layouts/MainLayout.astro";
 import ContactForm from "../components/ContactForm.astro";
 ---
 
-<OverflowXLayout title="Contact">
+<MainLayout title="Contact">
   <div id="contact-form">
     <ContactForm />
   </div>
-</OverflowXLayout>
+</MainLayout>
 
 <style>
   #contact-form {
