--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,11 @@ import Card from "../components/Card.astro";
 import Workers from "../components/Workers.astro";
 ---
 
-<MainLayout title="Daniel Segarra: We Workin Here." marquee={true}>
+<MainLayout
+  title="Daniel Segarra: We Workin Here."
+  marquee={true}
+  hideOverflowX={true}
+>
   <main>
     <section class="bio">
       <h2 style="font-size: 3.5rem;">Under Construction</h2>
