--- a/src/components/ScrollItem.astro
+++ b/src/components/ScrollItem.astro
@@ -102,6 +102,7 @@ let pd = "50px";
     transition: 0.4s;
   }
 
+  .item_link:focus,
   .item_link:hover {
     background: var(--color_1_1);
     color: var(--color_1_2);
