--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -1,9 +1,67 @@
 ---
-import SinglePageLayout from "../layouts/SinglePageLayout.astro";
+import ScrollLayout from "../layouts/ScrollLayout.astro";
 ---
 
-<SinglePageLayout title="Professional Work" footer={false}>
-  <nav>
+<ScrollLayout title="Professional Work" snapScroll={true}>
+  <article id="experience-description">
+    <h1>Technical Instructor</h1>
+    <section>
+      I have been teaching software development for over 5 years. I have
+      experience teaching in-person and online. I have taught at the college
+      level and have also taught at coding bootcamps. I have experience teaching
+      front to back Web Development, graphic design, and .
+    </section>
+
+    <section>
+      <h2>I have taught at the following institutions:</h2>
+      <ul>
+        <li>Brooklyn Public Library, Coding for Kids</li>
+        <li>Columbia University, Double Discovery Program</li>
+        <li>Change Food for Good, Intro to AgTech</li>
+        <li>Social Gatherings Where Computers are Magic</li>
+      </ul>
+    </section>
+
+    <section id="responsibilities">
+      <div>
+        <h2>
+          I have provided guidance through several key software development
+          practices and skillsets:
+        </h2>
+        <ul>
+          <li>HTML, CSS, JavaScript</li>
+          <li>Command Line / Shell Scripts</li>
+          <li>Git/GitHub</li>
+          <li>General Computer & Software Proficiency</li>
+        </ul>
+      </div>
+
+      <div>
+        <h2>I have also taught soft skills such as:</h2>
+        <ul>
+          <li>Agile, Scrum, Waterfall, TTD, CI/CD</li>
+          <li>Open Source Contribution</li>
+          <li>Technical Interviewing</li>
+          <li>Networking</li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <h2>And mentored advanced students in:</h2>
+      <ul>
+        <li>React, Redux, Next</li>
+        <li>Node.js, Express, MongoDB, MySQL, Jest, Mocha</li>
+        <li>Python, Django, Flask, BeautifulSoup, Selenium</li>
+      </ul>
+    </section>
+
+    <section>
+      View my <a href="/public/DanielSegarraResume2024.pdf" download
+        >current resume</a
+      >
+    </section>
+  </article>
+  <nav id="xp-nav">
     <ul>
       <li>
         <a href="/education"><mark>Technical Instructor</mark></a>
@@ -13,22 +71,61 @@ import SinglePageLayout from "../layouts/SinglePageLayout.astro";
       </li>
     </ul>
   </nav>
-</SinglePageLayout>
+</ScrollLayout>
 
 <style>
-  nav,
-  ul,
-  a {
+  #experience-description {
+    /* min-height: 100dvh; */
+    height: auto;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+  }
+  #experience-description h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  #experience-description ul {
+    list-style-position: inside;
+    padding-left: 1rem;
+  }
+  #experience-description p:not(:first-of-type) {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+  #experience-description section:not(:first-of-type) {
+    margin-bottom: 2rem;
+  }
+  #experience-description section {
+    /* font-size: 1.5rem; */
+    margin-bottom: 1rem;
+  }
+  #experience-description a {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+  #responsibilities {
+    display: flex;
+    justify-content: center;
+  }
+  #responsibilities > * {
+    width: 50%;
+  }
+  #xp-nav,
+  #xp-nav ul,
+  #xp-nav ul li a {
     width: 100%;
-    height: 100%;
+    height: 100svh;
   }
 
-  nav {
+  #xp-nav {
     overflow: hidden;
   }
 
-  ul,
-  li > a {
+  #xp-nav ul,
+  #xp-nav li > a {
     display: flex;
     text-align: center;
     align-items: center;
@@ -36,25 +133,25 @@ import SinglePageLayout from "../layouts/SinglePageLayout.astro";
     flex-wrap: wrap;
   }
 
-  li:nth-child(1):before,
-  li:last-child:before {
+  #xp-nav li:nth-child(1):before,
+  #xp-nav li:last-child:before {
     content: "";
     position: absolute;
     width: 50%;
     height: 100%;
   }
 
-  li:nth-child(1):before {
+  #xp-nav li:nth-child(1):before {
     top: 0;
     left: 0;
   }
 
-  li:nth-child(1):before {
+  #xp-nav li:nth-child(1):before {
     bottom: 0;
     right: 0;
   }
 
-  li {
+  #xp-nav li {
     /*! height: 50%; */
     position: relative;
     list-style-type: none;
@@ -64,7 +161,7 @@ import SinglePageLayout from "../layouts/SinglePageLayout.astro";
     font-size: clamp(1.2rem, 0.6091rem + 3.7818vw, 2.5rem);
   }
 
-  li > a {
+  #xp-nav li > a {
     height: 100%;
     padding: 0 1rem;
     text-decoration: none;
@@ -73,13 +170,13 @@ import SinglePageLayout from "../layouts/SinglePageLayout.astro";
     transition: all 2s ease;
   }
 
-  li > a:focus,
-  li > a:hover {
+  #xp-nav li > a:focus,
+  #xp-nav li > a:hover {
     box-shadow: -10px 0px 5px 5px #484848;
     scale: 1.2;
   }
 
-  a::after {
+  #xp-nav a::after {
     content: "";
     position: absolute;
     -webkit-transition: all 2s ease;
@@ -87,8 +184,8 @@ import SinglePageLayout from "../layouts/SinglePageLayout.astro";
     transition: all 2s ease;
   }
 
-  a:focus::after,
-  a:hover::after {
+  #xp-nav a:focus::after,
+  #xp-nav a:hover::after {
     content: "";
     position: absolute;
     inset: -1rem;
@@ -99,19 +196,19 @@ import SinglePageLayout from "../layouts/SinglePageLayout.astro";
     transition: all 2s ease;
   }
 
-  li:nth-child(1) > a:focus::after,
-  li:nth-child(1) > a:hover::after {
+  #xp-nav li:nth-child(1) > a:focus::after,
+  #xp-nav li:nth-child(1) > a:hover::after {
     background: linear-gradient(to bottom right, #5b8f691c, 90%, #4d795694);
   }
 
-  li:nth-child(2) > a:focus::after,
-  li:nth-child(2) > a:hover::after {
+  #xp-nav li:nth-child(2) > a:focus::after,
+  #xp-nav li:nth-child(2) > a:hover::after {
     background: linear-gradient(to bottom right, #4245440d, 80%, #393939);
   }
 
-  li:nth-child(1),
-  li:nth-child(1):before,
-  li:nth-child(1) > a {
+  #xp-nav li:nth-child(1),
+  #xp-nav li:nth-child(1):before,
+  #xp-nav li:nth-child(1) > a {
     background: url("../assets/DanielTeachingCropped1.jpg");
     background-position: right;
     color: darkgoldenrod;
@@ -119,11 +216,11 @@ import SinglePageLayout from "../layouts/SinglePageLayout.astro";
     background-size: cover;
   }
 
-  li:nth-child(1):before {
+  #xp-nav li:nth-child(1):before {
     background-position: center top;
   }
 
-  li:nth-child(2) > a {
+  #xp-nav li:nth-child(2) > a {
     background: url("https://media.istockphoto.com/id/1294575605/video/freelancer-working-on-his-laptop-at-night.jpg?s=640x640&k=20&c=I2lm8Av87-nPsp6_RUefXLyPM99l02ogQCZY253oi4o=");
     background-position: right;
     background-repeat: no-repeat;
@@ -131,16 +228,16 @@ import SinglePageLayout from "../layouts/SinglePageLayout.astro";
     background-size: 250%;
   }
 
-  li:nth-child(2):before {
+  #xp-nav li:nth-child(2):before {
     background-color: black;
   }
 
-  mark {
+  #xp-nav mark {
     padding: 0.5rem 1rem;
     background-color: white;
   }
 
-  li:hover {
+  #xp-nav li:hover {
     z-index: 100;
     background-size: contain;
     background-repeat: no-repeat;
@@ -150,19 +247,19 @@ import SinglePageLayout from "../layouts/SinglePageLayout.astro";
   is:inline
   src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
 <script>
-  gsap.from("nav > ul > li > a > mark", {
+  gsap.from("#xp-nav > ul > li > a > mark", {
     opacity: 0,
     duration: 5,
     ease: "ease-in",
   });
   // Use GSAP to animate the initial position of the <li> elements
-  gsap.from("nav ul li:nth-child(1)", {
+  gsap.from("#xp-nav ul li:nth-child(1)", {
     x: -100,
     opacity: 0,
     duration: 1.6,
     ease: "ease-in",
   });
-  gsap.from("nav ul li:last-child", {
+  gsap.from("#xp-nav ul li:last-child", {
     x: 100,
     opacity: 0,
     duration: 1.6,
