--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -17,44 +17,44 @@ let pd = "50px";
   <div class="window_split_sticky_scroll">
     <div class="scroll_window">
       <ScrollItem
-            label="01"
-            title_line_1="Auto"
-            title_line_2="Meal"
-            description="Automated food recommendations based on your pantry, wants, and needs."
-            link="https://github.com/automeal/AutoMeal"
-            button_text="try now"
-          />
+        label="01"
+        title_line_1="Auto"
+        title_line_2="Meal"
+        description="Automated food recommendations based on your pantry, wants, and needs."
+        link="https://github.com/automeal/AutoMeal"
+        button_text="try now"
+      />
       <ScrollItem
-            label="02"
-            title_line_1="Sumaryze"
-            title_line_2="That!"
+        label="02"
+        title_line_1="Sumaryze"
+        title_line_2="That!"
         description="Leveraging OpenAI to summarize YouTube videos with ease."
-            link="http://sumaryzethat.danielsegarra.dev/"
-            button_text="try now"
-          />
+        link="http://sumaryzethat.danielsegarra.dev/"
+        button_text="try now"
+      />
       <ScrollItem
-            label="03"
-            title_line_1=""
-            title_line_2="OGalaga"
-            description="Classic game written in OCaml."
-            link="https://github.com/buhotech/OGalaga"
-            button_text="play now"
-          />
+        label="03"
+        title_line_1=""
+        title_line_2="OGalaga"
+        description="Classic game written in OCaml."
+        link="https://github.com/buhotech/OGalaga"
+        button_text="play now"
+      />
       <ScrollItem
-            label="04"
-            title_line_1=""
-            title_line_2="Yahtzee"
-            description="Digitizing a classic handheld experience"
-            link="http://danielsegarra.dev/yahtzee"
-            button_text="play now"
-          />
-        </div>
+        label="04"
+        title_line_1=""
+        title_line_2="Yahtzee"
+        description="Digitizing a classic handheld experience"
+        link="http://danielsegarra.dev/yahtzee"
+        button_text="play now"
+      />
+    </div>
     <div class="sticky_window">
       <img
         class="sticky_content"
         title="AutoMeal (random 'fruit' image)"
         alt="fruit (random image)"
-                src="https://source.unsplash.com/random/400×400/?fruit"
+        src="https://source.unsplash.com/random/400×400/?fruit"
       />
       <img
         class="sticky_content"
@@ -62,24 +62,34 @@ let pd = "50px";
         alt="AI (random image)"
         src="https://source.unsplash.com/random/400×400/?ai"
       />
-              <!-- <iframe
-                src="http://sumaryzethat.danielsegarra.dev/"
-                width="100%"
-                height="100%"
-                frameborder="0"></iframe> -->
-              <img
+      <!-- <iframe
+          src="http://sumaryzethat.danielsegarra.dev/"
+          width="100%"
+          height="100%"
+          frameborder="0"></iframe> -->
+      <img
         class="sticky_content"
         title="OGalaga (random 'spaceship' image)"
         alt="spaceship (random image)"
-                src="https://source.unsplash.com/random/400×400/?spaceship"
-              />
-              <img
+        src="https://source.unsplash.com/random/400×400/?spaceship"
+      />
+      <img
         class="sticky_content"
         title="Yahtzee (random 'yahtzee dice' image)"
         alt="yahtzee dice (random image)"
-                src="https://source.unsplash.com/random/400×400/?yahtzee%20dice"
-              />
+        src="https://source.unsplash.com/random/400×400/?yahtzee%20dice"
+      />
     </div>
+  </div>
+  <div class="other_work">
+    <h2>Other Work</h2>
+    <a href="#">stuff im working on now</a>
+    <a href="#">miscellaneous work</a>
+    <a href="#">single-page mockups</a>
+    <a href="https://danielsegarra.dev/throwingAxeMenuAnimation"
+      >throwingAxeMenuAnimation</a
+    >
+    <a href="https://danielsegarra.dev/CFFG2PB">CFFG2PB</a>
   </div>
 </ScrollLayout>
 
@@ -175,6 +185,65 @@ let pd = "50px";
       margin-right: 0;
     }
   }
+
+  .other_work {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100dvh;
+    background: linear-gradient(
+      to bottom,
+      rgb(211, 161, 95) 0%,
+      rgb(157, 112, 54) 70%,
+      rgb(134, 93, 40) 80%,
+      #1e1101 100%,
+      rgb(13, 13, 13) 100%
+    );
+    color: white;
+  }
+  .other_work > a {
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid white;
+    border-radius: 10px;
+    text-decoration: none;
+    color: white;
+    transition: font-size 0.3s ease-in-out;
+  }
+
+  .other_work > h2 {
+    font-size: 2rem;
+    margin: 20px;
+    text-align: center;
+    font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    color: white;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+
+  .other_work > a:focus,
+  .other_work > a:hover {
+    font-size: 1.5em;
+    background-color: #e5d7c4;
+    /* -webkit-text-stroke: 1px black; */
+    /* color: transparent !important; */
+    color: #4d4d4d !important;
+  }
+
+  .other_work > a:active {
+    background-color: var(--color-1-1);
+    /* color: var(--second-color); */
+  }
+
+  .other_work > a:visited {
+    color: burlywood;
+  }
+
+  .other_work > a:link {
+    /* color: white; */
+  }
 </style>
 <script
   define:vars={{
@@ -250,6 +319,24 @@ let pd = "50px";
       animation: animation,
       scrub: 2,
       // scrub: workInfoItems.length,
+    });
+    // Define the animation
+    const otherWorkAnimation = gsap.from(".other_work > *", {
+      opacity: 0,
+      y: 20,
+      x: "-100%",
+      duration: 1,
+      stagger: 0.25, // should be a quarter of duration
+      ease: "power2.inOut",
+    });
+
+    // Trigger the animation when the section enters the viewport
+    ScrollTrigger.create({
+      trigger: ".other_work",
+      start: "top 80%", // Adjust as needed
+      animation: otherWorkAnimation,
+      onEnter: () => otherWorkAnimation.restart(),
+      // once: true, // Play animation only once
     });
   });
 </script>
