Commented out background-color and color styles in .other_work > a:active

--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -233,7 +233,7 @@ let pd = "50px";
   }
 
   .other_work > a:active {
-    background-color: var(--color-1-1);
+    /* background-color: var(--color-1-1); */
     /* color: var(--second-color); */
   }
 
