--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -1,66 +1,10 @@
 ---
+import ExperienceDescription from "../components/ExperienceDescription.astro";
 import ScrollLayout from "../layouts/ScrollLayout.astro";
 ---
 
 <ScrollLayout title="Professional Work" snapScroll={true}>
-  <article id="experience-description">
-    <h1>Technical Instructor</h1>
-    <section>
-      I have been teaching software development for over 5 years. I have
-      experience teaching in-person and online. I have taught at the college
-      level and have also taught at coding bootcamps. I have experience teaching
-      front to back Web Development, graphic design, and .
-    </section>
-
-    <section>
-      <h2>I have taught at the following institutions:</h2>
-      <ul>
-        <li>Brooklyn Public Library, Coding for Kids</li>
-        <li>Columbia University, Double Discovery Program</li>
-        <li>Change Food for Good, Intro to AgTech</li>
-        <li>Social Gatherings Where Computers are Magic</li>
-      </ul>
-    </section>
-
-    <section id="responsibilities">
-      <div>
-        <h2>
-          I have provided guidance through several key software development
-          practices and skillsets:
-        </h2>
-        <ul>
-          <li>HTML, CSS, JavaScript</li>
-          <li>Command Line / Shell Scripts</li>
-          <li>Git/GitHub</li>
-          <li>General Computer & Software Proficiency</li>
-        </ul>
-      </div>
-
-      <div>
-        <h2>I have also taught soft skills such as:</h2>
-        <ul>
-          <li>Agile, Scrum, Waterfall, TTD, CI/CD</li>
-          <li>Open Source Contribution</li>
-          <li>Technical Interviewing</li>
-          <li>Networking</li>
-        </ul>
-      </div>
-    </section>
-    <section>
-      <h2>And mentored advanced students in:</h2>
-      <ul>
-        <li>React, Redux, Next</li>
-        <li>Node.js, Express, MongoDB, MySQL, Jest, Mocha</li>
-        <li>Python, Django, Flask, BeautifulSoup, Selenium</li>
-      </ul>
-    </section>
-
-    <section>
-      View my <a href="/public/DanielSegarraResume2024.pdf" download
-        >current resume</a
-      >
-    </section>
-  </article>
+  <ExperienceDescription />
   <nav id="xp-nav">
     <ul>
       <li>
@@ -74,45 +18,6 @@ import ScrollLayout from "../layouts/ScrollLayout.astro";
 </ScrollLayout>
 
 <style>
-  #experience-description {
-    /* min-height: 100dvh; */
-    height: auto;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
-  }
-  #experience-description h1 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-  }
-  #experience-description ul {
-    list-style-position: inside;
-    padding-left: 1rem;
-  }
-  #experience-description p:not(:first-of-type) {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-  }
-  #experience-description section:not(:first-of-type) {
-    margin-bottom: 2rem;
-  }
-  #experience-description section {
-    /* font-size: 1.5rem; */
-    margin-bottom: 1rem;
-  }
-  #experience-description a {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-  }
-  #responsibilities {
-    display: flex;
-    justify-content: center;
-  }
-  #responsibilities > * {
-    width: 50%;
-  }
   #xp-nav,
   #xp-nav ul,
   #xp-nav ul li a {
@@ -246,23 +151,46 @@ import ScrollLayout from "../layouts/ScrollLayout.astro";
 <script
   is:inline
   src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+<script
+  is:inline
+  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"
+></script>
 <script>
+  // on scroll, animate the <mark> elements
   gsap.from("#xp-nav > ul > li > a > mark", {
     opacity: 0,
     duration: 5,
     ease: "ease-in",
+    scrollTrigger: {
+      trigger: "#xp-nav",
+      start: "top 80%",
+      end: "bottom 20%",
+      scrub: 1,
+    },
   });
-  // Use GSAP to animate the initial position of the <li> elements
+  // Use GSAP scroll trigger to animate the initial position of the <li> elements
   gsap.from("#xp-nav ul li:nth-child(1)", {
     x: -100,
     opacity: 0,
     duration: 1.6,
     ease: "ease-in",
+    scrollTrigger: {
+      trigger: "#xp-nav",
+      start: "top 80%",
+      end: "bottom 20%",
+      scrub: 1,
+    },
   });
   gsap.from("#xp-nav ul li:last-child", {
     x: 100,
     opacity: 0,
     duration: 1.6,
     ease: "ease-in",
+    scrollTrigger: {
+      trigger: "#xp-nav",
+      start: "top 80%",
+      end: "bottom 20%",
+      scrub: 1,
+    },
   });
 </script>
