Update scrollTrigger values in work.astro

--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -163,8 +163,8 @@ import ScrollLayout from "../layouts/ScrollLayout.astro";
     ease: "ease-in",
     scrollTrigger: {
       trigger: "#xp-nav",
-      start: "top 80%",
-      end: "bottom 20%",
+      start: "top 100%",
+      end: "bottom bottom",
       scrub: 1,
     },
   });
@@ -176,8 +176,8 @@ import ScrollLayout from "../layouts/ScrollLayout.astro";
     ease: "ease-in",
     scrollTrigger: {
       trigger: "#xp-nav",
-      start: "top 80%",
-      end: "bottom 20%",
+      start: "top 100%",
+      end: "bottom bottom",
       scrub: 1,
     },
   });
@@ -188,8 +188,8 @@ import ScrollLayout from "../layouts/ScrollLayout.astro";
     ease: "ease-in",
     scrollTrigger: {
       trigger: "#xp-nav",
-      start: "top 80%",
-      end: "bottom 20%",
+      start: "top 100%",
+      end: "bottom bottom",
       scrub: 1,
     },
   });
