--- a/src/components/ExperienceDescription.astro
+++ b/src/components/ExperienceDescription.astro
@@ -18,27 +18,29 @@
   </section>
 
   <section id="responsibilities">
-    <div>
-      <h2>
-        I have provided guidance through several key software development
-        practices and skillsets:
-      </h2>
-      <ul>
-        <li>HTML, CSS, JavaScript</li>
-        <li>Command Line / Shell Scripts</li>
-        <li>Git/GitHub</li>
-        <li>General Computer & Software Proficiency</li>
-      </ul>
-    </div>
-
-    <div>
-      <h2>I have also taught soft skills such as:</h2>
-      <ul>
-        <li>Agile, Scrum, Waterfall, TTD, CI/CD</li>
-        <li>Open Source Contribution</li>
-        <li>Technical Interviewing</li>
-        <li>Networking</li>
-      </ul>
+    <h2>
+      I have provided guidance through several key software development
+      practices and skillsets:
+    </h2>
+    <div id="skills">
+      <div id="hard-skills">
+        <h3>Hard Skills:</h3>
+        <ul>
+          <li>HTML, CSS, JavaScript</li>
+          <li>Command Line / Shell Scripts</li>
+          <li>Git/GitHub</li>
+          <li>General Computer & Software Proficiency</li>
+        </ul>
+      </div>
+      <div id="soft-skills">
+        <h3>Soft Skills:</h3>
+        <ul>
+          <li>Agile, Scrum, Waterfall, TTD, CI/CD</li>
+          <li>Open Source Contribution</li>
+          <li>Technical Interviewing</li>
+          <li>Networking</li>
+        </ul>
+      </div>
     </div>
   </section>
   <section>
@@ -85,17 +87,26 @@
   #experience-description section {
     /* font-size: 1.5rem; */
     margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
   #experience-description a {
     font-size: 1.5rem;
     margin-bottom: 1rem;
   }
+
+  /* make flex container where first item, h2 take up full width while rest share a row */
   #responsibilities {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
   }
-  #responsibilities > * {
-    width: 50%;
+  #skills {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
   }
 </style>
 
@@ -106,11 +117,11 @@
       trigger: "#experience-description",
       start: "top 80%",
       end: "bottom 20%",
-      toggleActions: "play none none none",
+      // toggleActions: "play none none none",
     },
     opacity: 0,
     y: 50,
     duration: 1,
-    stagger: 0.5,
+    stagger: 0.2,
   });
 </script>
