Added potential image links for scroll window

--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -353,3 +353,8 @@ let pd = "50px";
   is:inline
   src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"
 ></script>
+
+<!-- good images for scroll window -->
+<!-- https://images.unsplash.com/photo-1681040488449-5a445633bb7e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8eWFodHplZSBkaWNlfHx8fHx8MTcwNTc1NjM4Mg&ixlib=rb-4.0.3&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1080 -->
+<!-- https://images.unsplash.com/photo-1610483155766-e50e9774ad7f?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8c3BhY2VzaGlwfHx8fHx8MTcwNTc1NjM4Mg&ixlib=rb-4.0.3&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1080 -->
+<!-- https://images.unsplash.com/photo-1490474418585-ba9bad8fd0ea?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8ZnJ1aXR8fHx8fHwxNzA1NzU2Mzgy&ixlib=rb-4.0.3&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1080 -->
