Update resume link in ExperienceDescription component

--- a/src/components/ExperienceDescription.astro
+++ b/src/components/ExperienceDescription.astro
@@ -52,7 +52,7 @@
     </ul>
   </section>
 
-  <section>
+  <section id="resume-link">
     View my <a href="/public/DanielSegarraResume2024.pdf" target="_blank"
       >current resume</a
     >
@@ -107,6 +107,10 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+  }
+
+  #resume-link {
+    display: block;
   }
 </style>
 
