--- a/src/pages/work/education.astro
+++ b/src/pages/work/education.astro
@@ -1,5 +1,5 @@
 ---
-import SinglePageLayout from "../layouts/SinglePageLayout.astro";
+import SinglePageLayout from "../../layouts/SinglePageLayout.astro";
 ---
 
 <SinglePageLayout title="Education" footer={false}>
