--- a/src/pages/work/portfolio.astro
+++ b/src/pages/work/portfolio.astro
@@ -1,8 +1,8 @@
 ---
-import ScrollLayout from "../layouts/ScrollLayout.astro";
-import SinglePageLayout from "../layouts/SinglePageLayout.astro";
-import PerspectiveContainer from "../layouts/PerspectiveContainer.astro";
-import ScrollItem from "../components/ScrollItem.astro";
+import ScrollLayout from "../../layouts/ScrollLayout.astro";
+import SinglePageLayout from "../../layouts/SinglePageLayout.astro";
+import PerspectiveContainer from "../../layouts/PerspectiveContainer.astro";
+import ScrollItem from "../../components/ScrollItem.astro";
 
 let pr_color = "#fff";
 let second_color = "#0a0a0a";
