Add center alignment to h2 in experience description

--- a/src/components/TeachingGoals.astro
+++ b/src/components/TeachingGoals.astro
@@ -91,6 +91,9 @@
   #overview {
     max-width: 50em;
   }
+  #experience-description h2 {
+    text-align: center;
+  }
   #experience-description ul {
     list-style-position: inside;
     padding-left: 1rem;
