Add WorkTimeline component to work page

--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -1,5 +1,6 @@
 ---
 import TeachingGoals from "../../components/TeachingGoals.astro";
+import WorkTimeline from "../../components/WorkTimeline.astro";
 import ScrollLayout from "../../layouts/ScrollLayout.astro";
 ---
 
@@ -15,6 +16,7 @@ import ScrollLayout from "../../layouts/ScrollLayout.astro";
       </li>
     </ul>
   </nav>
+  <WorkTimeline />
 </ScrollLayout>
 
 <style>
